# felix86

./: CMakeLists.txt  CheckGit.cmake  README.md  README_CN.md
.github/workflows/: build.yml
counts/: AVX.json  HotBlocks.json  SSE4_1.json  SSSE3.json  X87.json
docs/: contributing.md
docs/internal/: new-release-guide.md
src/felix86/: emulator.cpp  emulator.hpp  main.cpp  repl.cpp
src/felix86/common/: config.cpp  config.inc  exit.hpp  feature.cpp  feature.hpp  global.cpp  global.hpp  info.cpp  log.cpp  state.cpp  state.hpp  sudo.cpp  utility.cpp  utility.hpp  xsave.cpp  xsave.hpp
src/felix86/hle/: abi.cpp  cpuid.cpp  guest_types.hpp  signals.cpp  signals.hpp  syscall.cpp  syscalls_common_32.inc  thread.cpp  thread.hpp  thunks.cpp  thunks_luajit.cpp
src/felix86/hle/guest_libs/: CMakeLists.txt
src/felix86/tools/: generate_instruction_count.cpp
src/felix86/v2/: handlers.cpp  handlers.inc  recompiler.cpp  recompiler.hpp
